--- a/environment.yml
+++ b/environment.yml
@@ -60,6 +60,7 @@ dependencies:
   - six=1.15.0=py_0
   - sqlite=3.33.0=h2a8f88b_0
   - tornado=6.1=py37hcc03f2d_2
+  - tqdm=4.63.0=pyhd8ed1ab_0
   - traitlets=5.1.1=pyhd8ed1ab_0
   - urllib3=1.25.11=py_0
   - vc=14.1=h0510ff6_4
