--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - appdirs=1.4.4=pyh9f0ad1d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.10.0=pyha770c72_0
   - blas=1.0=mkl
+  - brotli=1.0.9=h8ffe710_6
+  - brotli-bin=1.0.9=h8ffe710_6
   - brotlipy=0.7.0=py37he774522_1000
   - ca-certificates=2021.10.8=h5b45459_0
   - certifi=2021.10.8=py37h03978a9_1
@@ -15,39 +19,70 @@ dependencies:
   - chardet=3.0.4=py37_1003
   - colorama=0.4.4=pyh9f0ad1d_0
   - cryptography=3.1.1=py37h7a1dbc1_0
+  - cssselect=1.1.0=py_0
+  - cycler=0.11.0=pyhd8ed1ab_0
   - debugpy=1.5.1=py37hf2a7229_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - entrypoints=0.4=pyhd8ed1ab_0
+  - fake-useragent=0.1.11=pyhd8ed1ab_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.10.4=h546665d_1
+  - icu=67.1=h33f27b4_0
   - idna=2.10=py_0
+  - importlib-metadata=4.11.2=py37h03978a9_0
   - intel-openmp=2020.2=254
   - ipykernel=6.9.1=py37h4038f58_0
   - ipython=7.32.0=py37h03978a9_0
   - jedi=0.18.1=py37h03978a9_0
+  - jpeg=9d=h2bbff1b_0
   - jupyter_client=7.1.2=pyhd8ed1ab_0
   - jupyter_core=4.9.2=py37h03978a9_0
+  - kiwisolver=1.3.2=py37h8c56517_1
+  - libbrotlicommon=1.0.9=h8ffe710_6
+  - libbrotlidec=1.0.9=h8ffe710_6
+  - libbrotlienc=1.0.9=h8ffe710_6
+  - libclang=10.0.1=default_hf44288c_1
   - libiconv=1.15=vc14h29686d3_5
+  - libpng=1.6.37=h1d00b33_2
   - libsodium=1.0.18=h8d14728_1
+  - libtiff=4.0.10=h21b02b4_1005
+  - libwebp=1.0.2=hfa6e2cd_5
   - libxml2=2.9.10=hb89e7f3_3
   - libxslt=1.1.34=he774522_0
   - lxml=4.6.1=py37h1350720_0
+  - lz4-c=1.9.3=h8ffe710_1
+  - matplotlib=3.5.1=py37h03978a9_0
+  - matplotlib-base=3.5.1=py37h4a79c79_0
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mkl=2019.4=245
   - mkl-service=2.3.0=py37hb782905_0
   - mkl_fft=1.2.0=py37h45dec08_0
   - mkl_random=1.0.4=py37h343c172_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - networkx=2.5=py_0
   - numpy=1.19.1=py37h5510c5b_0
   - numpy-base=1.19.1=py37ha3acd2a_0
   - openssl=1.1.1l=h8ffe710_0
-  - pandas=1.1.3=py37ha925a31_0
-  - pandas-datareader=0.9.0=py_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - parse=1.19.0=pyh44b312d_0
   - parso=0.8.3=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
+  - pillow=9.0.1=py37hdc2b20a_0
   - pip=20.2.4=py37_0
   - prompt-toolkit=3.0.27=pyha770c72_0
   - pycparser=2.20=py_2
+  - pyee=8.1.0=pyhd8ed1ab_0
   - pygments=2.11.2=pyhd8ed1ab_0
   - pyopenssl=19.1.0=py_1
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pyppeteer=1.0.2=pyhd8ed1ab_0
+  - pyqt=5.12.3=py37h03978a9_8
+  - pyqt-impl=5.12.3=py37hf2a7229_8
+  - pyqt5-sip=4.19.18=py37hf2a7229_8
+  - pyqtchart=5.12=py37hf2a7229_8
+  - pyqtwebengine=5.12.1=py37hf2a7229_8
+  - pyquery=1.4.3=pyhd8ed1ab_0
   - pysocks=1.7.1=py37_1
   - python=3.7.9=h60c2a47_0
   - python-dateutil=2.8.1=py_0
@@ -55,20 +90,34 @@ dependencies:
   - pytz=2020.1=py_0
   - pywin32=303=py37hcc03f2d_0
   - pyzmq=22.3.0=py37hcce574b_1
+  - qt=5.12.9=hb2cf2c5_0
   - requests=2.24.0=py_0
+  - requests-html=0.10.0=pyhd8ed1ab_0
   - setuptools=50.3.0=py37h9490d1a_1
   - six=1.15.0=py_0
+  - soupsieve=2.3.1=pyhd8ed1ab_0
   - sqlite=3.33.0=h2a8f88b_0
+  - tk=8.6.11=h2bbff1b_0
   - tornado=6.1=py37hcc03f2d_2
   - tqdm=4.63.0=pyhd8ed1ab_0
   - traitlets=5.1.1=pyhd8ed1ab_0
+  - typing_extensions=4.1.1=pyha770c72_0
+  - ucrt=10.0.20348.0=h57928b3_0
   - urllib3=1.25.11=py_0
   - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_3
+  - vs2015_runtime=14.29.30037=h902a5da_6
+  - w3lib=1.22.0=pyh9f0ad1d_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
+  - websockets=10.2=py37hcc03f2d_0
   - wheel=0.35.1=py_0
   - win_inet_pton=1.1.0=py37_0
   - wincertstore=0.2=py37_0
+  - xz=5.2.5=h62dcd97_1
   - zeromq=4.3.4=h0e60522_1
+  - zipp=3.7.0=pyhd8ed1ab_1
   - zlib=1.2.11=vc14h1cdd9ab_1
+  - zstd=1.4.9=h6255e5f_0
+  - pip:
+    - pandas==1.3.5
+    - pandas-datareader==0.10.0
 prefix: E:\miniconda3\envs\stock-network
